niko screwed it up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <h1>Welcome Juan and Stefan!!</h1>
     <i>This is html.. Hello world.</i>
-    <h1>Niko is the best! There was a fly</h1>
+    <h1>June is the best!!!! There was a fly</h1>
 
 </body>
 
