--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
 <body>
 
-    <h1>Welcome Juan and Stefan!!</h1>
-    <i>This is html.. Hello world.</i>
-    <h1>June is the best!!!! There was a fly</h1>
-
+    <h2>This is totally differrnt</h2>
 </body>
 
 
