--- a/6-15/index.html
+++ b/6-15/index.html
@@ -10,11 +10,18 @@
     <h2 style='display:flex; justify-content: center;'>Welcome to OOP and Classes</h2>
 </body>
 
+
+
+
+<script src="emoji.js"></script>
+
+
 <script src="color.js"></script>
+
 <script src="script.js"></script>
 <script src="a.js"></script>
 <script src="b.js"></script>
 <script src="c.js"></script>
-
+<!-- <script src="class.js"></script> -->
 
 </html>
