--- a/6-16/index.html
+++ b/6-16/index.html
@@ -14,6 +14,19 @@
     #fill{
         color:green
     }
+
+    @keyframes cool {
+        from {
+            color:blue;
+            font-size:12px;
+        }
+        to {
+            color: red;
+            font-size:24px;
+
+        }
+
+    }
 </style>
 
 <body>
